--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,19 @@
 {
-    "name": "connected/yousign",
+    "name": "connected-company/yousign-client-php",
     "description": "Yousign API REST Client",
     "type": "library",
-    "version": "2.0.4",
-    // "autoload": {
-    //     "psr-4": {
-    //         "Connected\\Yousign\\": "src/Connected/Yousign"
-    //     }
-    // },
     "autoload": {
         "psr-0": {
             "Connected\\Yousign\\": "src/"
-            // "Connected\\Yousign\\": "src/Connected/Yousign"
         }
     },
     "require": {
         "php": ">=5.6.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^6.1"
     },
     "authors": [
         {
             "name": "Guillaume Flament",
             "email": "gflament@connected-company.fr"
         }
-    ],
-    "minimum-stability": "stable"
+    ]
 }
