--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "autoload": {
         "psr-0": {
-            "Connected\\Yousign\\": "src/"
+            "Connected": "src/"
         }
     },
     "require": {
