--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,12 @@
     "type": "library",
     "autoload": {
         "psr-0": {
-            "Connected": "src/"
+            "Connected\\Yousign\\": "src/"
         }
     },
     "require": {
-        "php": ">=5.6.0"
+        "php": ">=5.6.0",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "authors": [
         {
